fix(projectileTracker): restore velocity display in 26.1