@@ -3,11 +3,11 @@ package org.carpet.sgu.mixin;
 import carpet.logging.Logger;
 import carpet.logging.LoggerRegistry;
 import carpet.utils.Messenger;
-import java.util.Locale;
 import java.util.function.BooleanSupplier;
 import net.minecraft.server.level.ServerLevel;
 import net.minecraft.server.level.ServerPlayer;
 import net.minecraft.world.entity.Entity;
+import net.minecraft.world.phys.Vec3;
 import org.carpet.sgu.logger.ProjectileTraker;
 import org.spongepowered.asm.mixin.Mixin;
 import org.spongepowered.asm.mixin.injection.At;
@@ -17,36 +17,45 @@ import org.spongepowered.asm.mixin.injection.callback.CallbackInfo;
 @Mixin(ServerLevel.class)
 public class ServerWorldMixin {
     @Inject(method = "tick", at = @At("TAIL"))
-    private void projectileTrakerLog(BooleanSupplier shouldKeepTicking, CallbackInfo ci) {
+    private void sgu$projectileTrakerLog(BooleanSupplier shouldKeepTicking, CallbackInfo ci) {
         Logger logger = LoggerRegistry.getLogger(ProjectileTraker.NAME);
-        if (logger instanceof ProjectileTraker projectileTraker) {
-            logger.log((option, player) -> {
-                ServerPlayer serverPlayer = (ServerPlayer) player;
-                Entity entity = projectileTraker.getEntity(serverPlayer);
-                if (entity == null) {
-                    return null;
-                }
-
-                serverPlayer.sendSystemMessage(
-                    Messenger.c(
-                        "w [" + entity.getName().getString() + "] ",
-                        "w Pos: ",
-                        "t " + format(entity.getX(), entity.getY(), entity.getZ()),
-                        "w  Vec: ",
-                        "t " + format(entity.getDeltaMovement().x, entity.getDeltaMovement().y, entity.getDeltaMovement().z)
-                    ),
-                    true
-                );
-
-                if (entity.isRemoved()) {
-                    projectileTraker.entityTrackerMap.remove(serverPlayer.getUUID());
-                }
-                return null;
-            });
+        if (!(logger instanceof ProjectileTraker projectileTraker)) {
+            return;
         }
+
+        ServerLevel level = (ServerLevel) (Object) this;
+        logger.log((option, player) -> {
+            ServerPlayer serverPlayer = (ServerPlayer) player;
+            Entity entity = projectileTraker.getEntity(level.getServer(), serverPlayer);
+            if (entity == null) {
+                projectileTraker.entityTrackerMap.remove(serverPlayer.getUUID());
+                return null;
+            }
+
+            Vec3 pos = entity.position();
+            Vec3 velocity = entity.getDeltaMovement();
+            serverPlayer.sendSystemMessage(
+                Messenger.c(
+                    "w [" + entity.getName().getString() + "] ",
+                    "w Pos: ",
+                    "t " + toStringShort(pos),
+                    "w  Vec: ",
+                    "t " + toStringShort(velocity)
+                ),
+                true
+            );
+
+            if (entity.isRemoved()) {
+                projectileTraker.entityTrackerMap.remove(serverPlayer.getUUID());
+            }
+            return null;
+        });
     }
 
-    private static String format(double x, double y, double z) {
-        return String.format(Locale.ROOT, "%.2f, %.2f, %.2f", x, y, z);
+    private static String toStringShort(Vec3 vec) {
+        if (vec == null) {
+            return "(0.000, 0.000, 0.000)";
+        }
+        return "(%.3f, %.3f, %.3f)".formatted(vec.x, vec.y, vec.z);
     }
 }
